--- a/hm.tex
+++ b/hm.tex
@@ -172,31 +172,30 @@ linktoc=page}
 The literature on classical (or analytical, as it was called by Lagrange) mechanics is full of good material.
 Different sources present the topic from different perspectives and with different points of view, and may suite different people differently.
 In these lecture notes I am iterating on my perspective.
-The approach I am taking has been heavily influenced by \cite{book:arnold, book:knauf,lectures:dubrovin, book:lowenstein, book:marsdenratiu, lectures:tong,landau1976mechanics}.
+The approach I am taking has been heavily influenced by \cite{book:arnold, book:knauf, lectures:dubrovin, book:lowenstein, book:marsdenratiu, lectures:tong, landau1976mechanics}.
 
-The book \cite{book:knauf}, in addition to being a good introduction to many topics in classical mechanics that we will not have time to discuss during the lectures, can be freely accessed from within the university using the \href{https://link.springer.com/book/10.1007%2F978-3-662-55774-7}{SpringerLink} service.
-Most of the topics covered in this course can be found on \cite{book:knauf} in chapters 1, 6, 8, 10, 11, 13, 15. I believe this book presents an almost accessible proof of the KAM theorem.
+The book \cite{book:knauf} will be a good extra reference for the course. In addition to being a good introduction to many topics in classical mechanics that we will not have time to discuss during the lectures, it covers almost all the material that we will treat in chapters 1, 6, 8, 10, 11, 13, 15. Furthermore, the book can be freely and legally accessed via the University proxy using the \href{https://link.springer.com/book/10.1007%2F978-3-662-55774-7}{SpringerLink} service.
 
-I had lots of fun reading \cite{schwichtenberg2019no}, if none of the references above satisfies you, consider having a look. And for an unusual approach to the matter, centered on making everything explicitly computable by a computer, you can have a look at the marvellous \cite{book:sicm}. Finally, a good and enjoyable classical reference is \cite{goldstein2013classical}.
+I had lots of fun reading \cite{schwichtenberg2019no}, if none of the references above satisfies you, consider having a look at that. And for an unusual approach to the topic, centered around the idea that everything should be explicit enough to be directly computable by a computer, you can have a look at the marvellous \cite{book:sicm}. Finally, a good and enjoyable classical reference is \cite{goldstein2013classical}.\medskip
 
-These notes are not (yet) exhaustive.
-They will be updated throughout the course, and it will likely take a few years of course iterations before they stabilize.
-Some topics, examples and exercises discussed in class will not be in these notes, but may appear as examples, exercises or problems in the literature presented above.
+These notes are not (yet?) exhaustive.
+They will be updated throughout the course, and it will likely take a few years of course iterations before they fully stabilize.
+Some topics, examples and exercises discussed in class will not be in these notes, but may appear as examples, exercises or problems in the literature presented above or on the material posted in the course webpage.
 
 Throughout the course, we will discuss the main ideas in Newtonian, Lagrangian and Hamiltonian mechanics and the relations between them.
-We will discuss symmetries and phase space reduction, normal modes and small oscillations.
-We will then move to study action--angle coordinates and integrability, and finally we will discuss perturbation theory.
-On the latter, we will only briefly discuss resonances and mostly focus on KAM theory and the Nekhoroshev theorem.
+This will include symmetries and elementary phase space reduction, normal modes and small oscillations.
+We will then move to study action--angle coordinates and integrability, and finally we will discuss elementary perturbation theory.
+On the latter, we will only briefly discuss resonances and mostly focus on the meaning of the Kolmogorov-Arnold-Moser theorem and the Nekhoroshev theorem.
 
-Topics that I intend to add over time include: contact mechanics, non-holonomic mechanics/sub-riemannian geometry, numerical methods, rigid bodies, mathematical billiards, integrability via Lax pairs...
+Topics that I intend to add over time include: contact mechanics, non-holonomic mechanics/sub-riemannian geometry, numerical methods, rigid bodies, mathematical billiards, integrability via Lax pairs... I don't know if this is just whishful thinking or if it will happen at some point, but I welcome any contribution in these directions.
 
-A number of extra references covering some of the topics mentioned above is \href{https://www.mseri.me/links-from-hm/}{collected on my blog (you can go there by clicking here)}.
+A number of extra references covering some of the topics mentioned above is \href{https://www.mseri.me/links-from-hm/}{collected on my blog}. I will make sure to keep the post updated and the links working. \medskip
 
 Please don't be afraid to send me comments to improve the course or the text and to fix the many typos that will surely be in this first draft. They will be very appreciated.
 
 I am extremely grateful to Riccardo Bonetto, Dijs de Neeling, Anouk Pelzer, Robbert Scholtens, Albert \v{S}ilvans and Jermain Wall\'e for their careful reading of the notes and their useful comments and corrections.
 
-Last but not least, I owe a huge debt of gratitude to \href{https://crojasmolina.com}{Constanza Rojas-Molina}, who kindly allowed me to use some of her beautiful artworks in the lecture notes.
+Last but not least, I owe a huge debt of gratitude to \href{https://crojasmolina.com}{Constanza Rojas-Molina}, who kindly allowed me to use some of her beautiful artworks in these notes.
 
 \chapter{Classical mechanics, from Newton to Lagrange and back}
 
